examples/core/errors/type_errors/14_dot_on_non_constructor.output.txt

error[E0111]: Cannot access field on non-record
  ┌─ input:6:1
3 │ // This error occurs when using dot notation on a primitive type
4 │ // Example: trying to access a field on an integer
5 │ let x = 42 in
6 │ x.field
    ^
7 │ 
  = note: Cannot access field `field` on this value
  = note: Field access (.field) only works on records
  = hint: Use a record value instead of a primitive
  = hint: Check that you're accessing a record, not a number or other type
  = hint: Wrap the value in a record: {value: x}.field

